# md_data_explorer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENT.md  Makefile  PHASE_0_COMPLETION_REVIEW.md  README.md  baseline_coverage.txt  mkdocs.yml  ollama_config.yaml  pyproject.toml  taskmaster.yaml  test_zip_upload.py
.claude/: CLAUDE.md  README.md  settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: code-quality.md  pr-review.md
.claude/hooks/: auto-format-python.sh  block-main-edits.sh  enforce-tests-updated.sh
.context/diffs/: current.diff  run_app_verbose.diff  upload_data_progress_ui.diff  user_datasets_progress_callback.diff
.context/sessions/: docs-cleanup-duplicates.yaml  multi-table-progress-visibility-debugging.yaml  phase1-phase2-docs-nlquery.yaml  phase3-4-schema-multitable.yaml  question-driven-nl-semantic.yaml
.cursor/: adr008_progress.md
.cursor/commands/: claude-guardrails.md  plan-review.md  plan-update.md  postmortem.md  pr-review.md  snapshot.md  spec-anchor.md  spec-driven.md  staff-consult.md
.cursor/migrations/: PHASE_8_2_DATASET_LOADER_MIGRATION.md
.cursor/plans/: PHASE_1.1.5_EVALUATION.md  add_logging_and_contract-based_architecture_0169a671.plan.md  address_staff_engineer_feedback_state_machine_documentation_and_ui_dry_refactoring_4af77b8d.plan.md  adr003_implementation_plan_38b38241.plan.md  adr004_phase_4_proactive_question_generation_864660ab.plan.md  adr009_llm-enhanced_ux_implementation_d67d7f82.plan.md  chat-first_ux_ask_questions_without_ceremonial_buttons_(ship-ready)_20f1b3bc.plan.md  cohort-first_single_table_mvp_828f2e4a.plan.md  comprehensive_integration_test_coverage_d6cfb040.plan.md  config_migration_to_yaml_ed79c904.plan.md  doctor-friendly_macos_dmg_installer_6f0341eb.plan.md  dry_solid_platform_refactoring_6b1c0a18.plan.md  fix_chat_response_display_-_state_machine_and_rendering_flow_ee9c5d8f.plan.md  fix_comparison_analysis_and_implement_conversational_filtering_ui_7e5ceada.plan.md  fix_expensive_full-scan_operations_in_multi-table_handler_classification_a3690050.plan.md  fix_lazyframe_boundary_integrity_and_test_quality_d9584b5e.plan.md  fix_m3_dimension_mart_implementation_issues_a10636b3.plan.md  fix_pr32_follow-up_tasks_ed91e7fb.plan.md  fix_registry_param_filtering_and_semanticlayer_table_naming_b8d96b9c.plan.md  fix_semanticlayer_path_resolution_and_add_logging_593766ea.plan.md  fix_streamlit_chat_transcript_and_run_key_collisions_bbaf3356.plan.md  implement_adr002_persistent_storage_0c9e0051.plan.md  implement_adr007_feature_parity_architecture_fa3918e7.plan.md  implement_adr008_versioned_dataset_persistence_with_rollback_375eeede.plan.md  improve_nl_query_ux_for_single-table_uploads_9b89bb19.plan.md  logging_and_outcome_optional_fix_19fed9ae.plan.md  milestone_6_add_granularity_parameter_to_clinicaldataset.get_cohort()_774d7687.plan.md  multi-table_handler_refactor_aggregate-before-join_architecture_b7ca2b5e.plan.md  mypy_type_fixes_with_dry_20250101.plan.md  performance_tracking_and_reporting_system_4dc41e8b.plan.md  queryplan_as_product_+_critical_fixes_4c27cb91.plan.md  rag_type_safety_and_multi-layer_validation_7eeb9d1f.plan.md  remove_confirmation_logic_and_add_progressive_thinking_indicators_2c08510a.plan.md  reusable_visualization_framework_for_correlation_analysis_68d33cb3.plan.md  self-improving_nl_query_parser_1bf8b1cf.plan.md  spec-driven_governance_framework_f40bf271.plan.md  state_extraction_from_streamlit_8fee5f48.plan.md  streamlit_state_extraction_mvp.plan.md  streamlit_to_lightweight_ui_refactor_4iMKv.plan.md  test_refactoring_align_tests_with_semantic_layer_architecture_8f6e5155.plan.md  (+1 more)
.cursor/rules/: 000-project-setup-and-makefile.mdc  001-core-tdd-protocol.mdc  001-self-improving-assistant.mdc  002-code-quality-standards.mdc  100-polars-first.mdc  101-testing-hygiene.mdc  102-dry-principles.mdc  103-staff-engineer-standards.mdc  104-plan-execution-hygiene.mdc  105-test-fixture-enforcement.mdc  106-test-quality-thresholds.mdc  107-hitl-safety.mdc  108-coverage-enforcement.mdc  230-core-output-format.mdc  999-agent-execution-protocol.mdc  active-session.mdc  claude-guardrails.mdc
.github/workflows/: ci.yml  docs.yml
config/: README.md  datasets.yaml  logging.yaml  nl_query.yaml  nl_query_patterns.yaml  ollama.yaml  paths.yaml  prompt_learning.yaml  ui.yaml  validation.yaml
data/: analytics.duckdb  clinical_analytics.db
data/configs/: datasets.yaml
docs/: IBIS_SEMANTIC_LAYER.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  NL_QUERY_SELF_IMPROVEMENT.md  PHASE_0_CLINICIAN_WORKFLOWS.md  README.md  index.md  pyproject.toml  summary.md
docs/api-reference/: core.md  datasets.md  ui.md
docs/architecture/: ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_REFACTOR.md  DATASET_STRUCTURE_PATTERNS.md  LIGHTWEIGHT_UI_ARCHITECTURE.md  SEMANTIC_LAYER_FASTAPI_ADAPTER.md  dataset-registry.md  nl-query-engine.md  overview.md  semantic-layer.md
docs/development/: contributing.md  setup.md  testing.md
docs/getting-started/: installation.md  quick-start.md  uploading-data.md
docs/implementation/: IMPLEMENTATION_PLAN.md  summary.md
docs/research/: NL_QUERY_BEST_PRACTICES.md
docs/specs/: IMPLEMENTATION_STATUS.md  cursor-dry-refactor.md  multi-table-support.md  next-phase.md  question-driven-analysis.md  spec_clinical_analytics_platform.md
docs/todos/: 001-pending-p1-sql-injection-vulnerability.md  002-pending-p1-missing-type-hints-entire-codebase.md  (+8 more)
docs/vision/: UNIFIED_VISION.md  (+1 more)
scripts/: __init__.py  analyze_fixture_performance.py  analyze_parse_outcomes.py  categorize_slow_tests.py  check_coverage_regression.py  check_test_fixtures.py  generate_performance_report.py  run_app.sh  self_improve_nl_parsing.py  validate_platform.py  verify_coverage.sh  verify_regression_protection.sh
tests/: .coverage_baseline.json  .performance_baseline.json  AGENTS.md  PERFORMANCE.md  README.md  conftest.py  test_covid_ms_dataset.py  test_mapper.py  test_performance_regression.py  test_registry.py  test_ui.py  test_ui_integration.py  test_upload_security.py  test_upload_security_manual.py
(+391 files in other folders)
